Update docs for 6bd77cea1923867c4664bb35c807a0a2083e1b88
Update to the latest nightly.

--- a/coatcheck/enum.ErrorKind.html
+++ b/coatcheck/enum.ErrorKind.html
@@ -26,7 +26,7 @@
 
     <section class="sidebar">
         
-        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.AccessError.html' title='The error yielded an access fails.'>AccessError</a><a class='struct ' href='struct.ClaimError.html' title='The error yielded when a claim fails.'>ClaimError</a><a class='struct ' href='struct.CoatCheck.html' title='A data structure storing values indexed by tickets.'>CoatCheck</a><a class='struct ' href='struct.Ticket.html' title='A `Ticket` is an opaque data structure that can be used to claim the associated value.'>Ticket</a><a class='struct ' href='struct.Tickets.html' title='Iterator that checks-in values in exchange for tickets.'>Tickets</a></div><div class='block enum'><h2>Enums</h2><a class='enum current' href='enum.ErrorKind.html' title='Coat check error types'>ErrorKind</a></div>
+        <p class='location'><a href='index.html'>coatcheck</a></p><script>window.sidebarCurrent = {name: 'ErrorKind', ty: 'enum', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
     <nav class="sub">
@@ -43,7 +43,7 @@
     <section id='main' class="content enum">
 <h1 class='fqn'><span class='in-band'>Enum <a href='index.html'>coatcheck</a>::<wbr><a class='enum' href=''>ErrorKind</a><wbr></span><span class='out-of-band'><span id='render-detail'>
             <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-237' href='../src/coatcheck/lib.rs.html#252-254'>[src]</a></span></h1>
+        </span><a id='src-236' href='../src/coatcheck/lib.rs.html#250-252'>[src]</a></span></h1>
 <pre class='rust enum'>pub enum ErrorKind {
     WrongCoatCheck,
 }</pre><div class='docblock'><p>Coat check error types</p>
