--- a/snowflake/struct.ProcessUniqueId.html
+++ b/snowflake/struct.ProcessUniqueId.html
@@ -26,7 +26,7 @@
 
     <section class="sidebar">
         
-        <p class='location'><a href='index.html'>snowflake</a></p><div class='block struct'><h2>Structs</h2><a class='struct current' href='struct.ProcessUniqueId.html' title='Process unique IDs are guaranteed to be unique within the current process, for the lifetime of the current process.'>ProcessUniqueId</a></div>
+        <p class='location'><a href='index.html'>snowflake</a></p><script>window.sidebarCurrent = {name: 'ProcessUniqueId', ty: 'struct', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </section>
 
     <nav class="sub">
