--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -745,8 +745,6 @@
 <span id="703">703</span>
 <span id="704">704</span>
 <span id="705">705</span>
-<span id="706">706</span>
-<span id="707">707</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -764,7 +762,7 @@
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! ```</span>
 <span class='doccomment'>//! use coatcheck::{CoatCheck, Ticket};</span>
-<span class='doccomment'>//! use std::error::FromError;</span>
+<span class='doccomment'>//! use std::convert::From;</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! let mut cc = CoatCheck::new();</span>
 <span class='doccomment'>//!</span>
@@ -773,7 +771,7 @@
 <span class='doccomment'>//! let ticket2 = cc.check(&quot;my other value&quot;);</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! // Look at the first one.</span>
-<span class='doccomment'>//! println!(&quot;{}&quot;, cc[ticket1]);</span>
+<span class='doccomment'>//! println!(&quot;{}&quot;, cc[&amp;ticket1]);</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! // Claim the second one.</span>
 <span class='doccomment'>//! println!(&quot;{}&quot;, cc.claim(ticket2).unwrap());</span>
@@ -789,7 +787,7 @@
 <span class='doccomment'>//! let mut cc2: CoatCheck&lt;&amp;str&gt; = CoatCheck::new();</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! // `ticket1` was never claimed so let&#39;s try claiming it in this coat check...</span>
-<span class='doccomment'>//! let ticket: Ticket = FromError::from_error(cc2.claim(ticket1).unwrap_err());</span>
+<span class='doccomment'>//! let ticket: Ticket = From::from(cc2.claim(ticket1).unwrap_err());</span>
 <span class='doccomment'>//! // It fails and returns the ticket.</span>
 <span class='doccomment'>//! ```</span>
 <span class='doccomment'>//!</span>
@@ -900,7 +898,6 @@
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//!  * Multiple references: There&#39;s no way to give away a reference to a value</span>
 <span class='doccomment'>//!    (without using actual references, that is).</span>
-<span class='attribute'>#<span class='op'>!</span>[<span class='ident'>feature</span>(<span class='ident'>core</span>)]</span>
 <span class='kw'>extern</span> <span class='kw'>crate</span> <span class='ident'>snowflake</span>;
 
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>fmt</span>;
@@ -909,9 +906,8 @@
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>default</span>::<span class='ident'>Default</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>slice</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>iter</span>;
-<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>num</span>::<span class='ident'>Int</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>mem</span>;
-<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>error</span>;
+<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>convert</span>::<span class='ident'>From</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>as</span> <span class='ident'>ErrorTrait</span>;
 
 <span class='kw'>use</span> <span class='ident'>snowflake</span>::<span class='ident'>ProcessUniqueId</span>;
@@ -1019,7 +1015,7 @@
     <span class='kw'>pub</span> <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>,
 }
 
-<span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>for</span> <span class='ident'>ClaimError</span> {
+<span class='kw'>impl</span> <span class='ident'>ErrorTrait</span> <span class='kw'>for</span> <span class='ident'>ClaimError</span> {
     <span class='kw'>fn</span> <span class='ident'>description</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='ident'>str</span> {
         <span class='self'>self</span>.<span class='ident'>kind</span>.<span class='ident'>description</span>()
     }
@@ -1037,8 +1033,8 @@
     }
 }
 
-<span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>FromError</span><span class='op'>&lt;</span><span class='ident'>ClaimError</span><span class='op'>&gt;</span> <span class='kw'>for</span> <span class='ident'>Ticket</span> {
-    <span class='kw'>fn</span> <span class='ident'>from_error</span>(<span class='ident'>e</span>: <span class='ident'>ClaimError</span>) <span class='op'>-&gt;</span> <span class='ident'>Ticket</span> {
+<span class='kw'>impl</span> <span class='ident'>From</span><span class='op'>&lt;</span><span class='ident'>ClaimError</span><span class='op'>&gt;</span> <span class='kw'>for</span> <span class='ident'>Ticket</span> {
+    <span class='kw'>fn</span> <span class='ident'>from</span>(<span class='ident'>e</span>: <span class='ident'>ClaimError</span>) <span class='op'>-&gt;</span> <span class='ident'>Ticket</span> {
         <span class='ident'>e</span>.<span class='ident'>ticket</span>
     }
 }
@@ -1050,7 +1046,7 @@
     <span class='kw'>pub</span> <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>,
 }
 
-<span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>for</span> <span class='ident'>AccessError</span> {
+<span class='kw'>impl</span> <span class='ident'>ErrorTrait</span> <span class='kw'>for</span> <span class='ident'>AccessError</span> {
     <span class='kw'>fn</span> <span class='ident'>description</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='ident'>str</span> {
         <span class='self'>self</span>.<span class='ident'>kind</span>.<span class='ident'>description</span>()
     }
@@ -1434,7 +1430,7 @@
     }
 }
 
-<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> <span class='ident'>Index</span><span class='op'>&lt;</span><span class='ident'>Ticket</span><span class='op'>&gt;</span> <span class='kw'>for</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
+<span class='kw'>impl</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>V</span><span class='op'>&gt;</span> <span class='ident'>Index</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='ident'>Ticket</span><span class='op'>&gt;</span> <span class='kw'>for</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
     <span class='kw'>type</span> <span class='ident'>Output</span> <span class='op'>=</span> <span class='ident'>V</span>;
     <span class='attribute'>#[<span class='ident'>inline</span>]</span>
     <span class='kw'>fn</span> <span class='ident'>index</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='ident'>V</span> {
@@ -1442,7 +1438,7 @@
     }
 }
 
-<span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> <span class='ident'>IndexMut</span><span class='op'>&lt;</span><span class='ident'>Ticket</span><span class='op'>&gt;</span> <span class='kw'>for</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
+<span class='kw'>impl</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>V</span><span class='op'>&gt;</span> <span class='ident'>IndexMut</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='ident'>Ticket</span><span class='op'>&gt;</span> <span class='kw'>for</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
     <span class='attribute'>#[<span class='ident'>inline</span>]</span>
     <span class='kw'>fn</span> <span class='ident'>index_mut</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>V</span> {
         <span class='self'>self</span>.<span class='ident'>get_mut</span>(<span class='ident'>ticket</span>).<span class='ident'>ok</span>().<span class='ident'>expect</span>(<span class='string'>&quot;ticket for wrong CoatCheck&quot;</span>)
