Update docs for 85ab0ed3bfa35500242913a36e8c0098829716f3
impl clone.

--- a/coatcheck/enum.ErrorKind.html
+++ b/coatcheck/enum.ErrorKind.html
@@ -41,15 +41,17 @@
     </nav>
 
     <section id='main' class="content enum">
-<h1 class='fqn'><span class='in-band'>Enum <a href='index.html'>coatcheck</a>::<wbr><a class='enum' href=''>ErrorKind</a><wbr></span><span class='out-of-band'><span id='render-detail'>
+<h1 class='fqn'><span class='in-band'>Enum <a href='index.html'>coatcheck</a>::<wbr><a class='enum' href=''>ErrorKind</a></span><span class='out-of-band'><span id='render-detail'>
             <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-236' href='../src/coatcheck/lib.rs.html#250-252'>[src]</a></span></h1>
+        </span><a id='src-229' class='srclink' href='../src/coatcheck/lib.rs.html#250-252'>[src]</a></span></h1>
 <pre class='rust enum'>pub enum ErrorKind {
     WrongCoatCheck,
 }</pre><div class='docblock'><p>Coat check error types</p>
 </div><h2 class='variants'>Variants</h2>
-<table><tr><td id='variant.WrongCoatCheck'><a class='stability Unmarked' title='No stability level'></a><code>WrongCoatCheck</code></td><td></td></tr></table><h2 id='methods'>Methods</h2><h3 class='impl'><a class='stability Unmarked' title='No stability level'></a><code>impl <a class='enum' href='../coatcheck/enum.ErrorKind.html' title='coatcheck::ErrorKind'>ErrorKind</a></code></h3><div class='impl-items'><h4 id='method.description' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.description' class='fnname'>description</a>(&amp;self) -&gt; &amp;<a href='http://doc.rust-lang.org/nightly/std/primitive.str.html'>str</a></code></h4>
-</div><h2 id='implementations'>Trait Implementations</h2><h3 id='derived_implementations'>Derived Implementations </h3><h3 class='impl'><a class='stability Stable' title='Stable'></a><code>impl <a class='trait' href='http://doc.rust-lang.org/nightly/core/marker/trait.Copy.html' title='core::marker::Copy'>Copy</a> for <a class='enum' href='../coatcheck/enum.ErrorKind.html' title='coatcheck::ErrorKind'>ErrorKind</a></code></h3><div class='impl-items'></div></section>
+<table><tr><td id='variant.WrongCoatCheck'><code>WrongCoatCheck</code></td><td></td></tr></table><h2 id='methods'>Methods</h2><h3 class='impl'><code>impl <a class='enum' href='../coatcheck/enum.ErrorKind.html' title='coatcheck::ErrorKind'>ErrorKind</a></code></h3><div class='impl-items'><h4 id='method.description' class='method'><code>fn <a href='#method.description' class='fnname'>description</a>(&amp;self) -&gt; &amp;<a href='http://doc.rust-lang.org/nightly/std/primitive.str.html'>str</a></code></h4>
+</div><h2 id='implementations'>Trait Implementations</h2><h3 id='derived_implementations'>Derived Implementations </h3><h3 class='impl'><code>impl <a class='trait' href='http://doc.rust-lang.org/nightly/core/marker/trait.Copy.html' title='core::marker::Copy'>Copy</a> for <a class='enum' href='../coatcheck/enum.ErrorKind.html' title='coatcheck::ErrorKind'>ErrorKind</a></code></h3><div class='impl-items'></div><h3 class='impl'><code>impl <a class='trait' href='http://doc.rust-lang.org/nightly/core/clone/trait.Clone.html' title='core::clone::Clone'>Clone</a> for <a class='enum' href='../coatcheck/enum.ErrorKind.html' title='coatcheck::ErrorKind'>ErrorKind</a></code></h3><div class='impl-items'><h4 id='method.clone' class='method'><code>fn <a href='http://doc.rust-lang.org/nightly/core/clone/trait.Clone.html#method.clone' class='fnname'>clone</a>(&amp;self) -&gt; <a class='enum' href='../coatcheck/enum.ErrorKind.html' title='coatcheck::ErrorKind'>ErrorKind</a></code></h4>
+<h4 id='method.clone_from' class='method'><code>fn <a href='http://doc.rust-lang.org/nightly/core/clone/trait.Clone.html#method.clone_from' class='fnname'>clone_from</a>(&amp;mut self, source: &amp;Self)</code></h4>
+</div></section>
     <section id='search' class="content hidden"></section>
 
     <section class="footer"></section>
