Update docs for ecc97a61ab8f68328954b39993c966744d55c1ac
Move into_iter to IntoIterator impl.

--- a/coatcheck/index.html
+++ b/coatcheck/index.html
@@ -43,7 +43,7 @@
     <section id='main' class="content mod">
 <h1 class='fqn'><span class='in-band'>Crate <a class='mod' href=''>coatcheck</a></span><span class='out-of-band'><span id='render-detail'>
             <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-0' class='srclink' href='../src/coatcheck/lib.rs.html#1-705'>[src]</a></span></h1>
+        </span><a id='src-0' class='srclink' href='../src/coatcheck/lib.rs.html#1-712'>[src]</a></span></h1>
 <div class='docblock'>
 <h1 id="coatcheck" class='section-header'><a
                            href="#coatcheck">CoatCheck</a></h1>
@@ -63,6 +63,7 @@ actually need to be able to choose the keys.</p>
                            href="#example">Example</a></h2><pre id='rust-example-rendered' class='rust '>
 <span class='kw'>use</span> <span class='ident'>coatcheck</span>::{<span class='ident'>CoatCheck</span>, <span class='ident'>Ticket</span>};
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>convert</span>::<span class='ident'>From</span>;
+<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>iter</span>::<span class='ident'>IntoIterator</span>;
 
 <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>cc</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
 
