Update docs for cbc19bb54b6caae3119603cd4546cf793da5dec1
Remove unecessary imports.

--- a/snowflake/index.html
+++ b/snowflake/index.html
@@ -42,8 +42,8 @@
 
     <section id='main' class="content mod">
 <h1 class='fqn'><span class='in-band'>Crate <a class='mod' href=''>snowflake</a></span><span class='out-of-band'><span id='render-detail'>
-            <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-0' class='srclink' href='../src/snowflake/lib.rs.html#1-8'>[src]</a></span></h1>
+            <a id="toggle-all-docs" href="#" title="collapse all docs">[-]</a>
+        </span><a id='src-0' class='srclink' href='../src/snowflake/lib.rs.html#1-8' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>A crate for quickly generating unique IDs with guaranteed properties.</p>
 
 <p>This crate currently includes guaranteed process unique IDs but may include new ID types in the
