--- a/coatcheck/enum.ErrorKind.html
+++ b/coatcheck/enum.ErrorKind.html
@@ -42,8 +42,8 @@
 
     <section id='main' class="content enum">
 <h1 class='fqn'><span class='in-band'>Enum <a href='index.html'>coatcheck</a>::<wbr><a class='enum' href=''>ErrorKind</a></span><span class='out-of-band'><span id='render-detail'>
-            <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-231' class='srclink' href='../src/coatcheck/lib.rs.html#251-253'>[src]</a></span></h1>
+            <a id="toggle-all-docs" href="#" title="collapse all docs">[-]</a>
+        </span><a id='src-228' class='srclink' href='../src/coatcheck/lib.rs.html#249-251' title='goto source code'>[src]</a></span></h1>
 <pre class='rust enum'>pub enum ErrorKind {
     WrongCoatCheck,
 }</pre><div class='docblock'><p>Coat check error types</p>
