--- a/coatcheck/struct.CoatCheck.html
+++ b/coatcheck/struct.CoatCheck.html
@@ -42,8 +42,8 @@
 
     <section id='main' class="content struct">
 <h1 class='fqn'><span class='in-band'>Struct <a href='index.html'>coatcheck</a>::<wbr><a class='struct' href=''>CoatCheck</a></span><span class='out-of-band'><span id='render-detail'>
-            <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-735' class='srclink' href='../src/coatcheck/lib.rs.html#398-403'>[src]</a></span></h1>
+            <a id="toggle-all-docs" href="#" title="collapse all docs">[-]</a>
+        </span><a id='src-732' class='srclink' href='../src/coatcheck/lib.rs.html#396-401' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct CoatCheck&lt;V&gt; {
     // some fields omitted
 }</pre><div class='docblock'><p>A data structure storing values indexed by tickets.</p>
