--- a/coatcheck/struct.Ticket.html
+++ b/coatcheck/struct.Ticket.html
@@ -42,8 +42,8 @@
 
     <section id='main' class="content struct">
 <h1 class='fqn'><span class='in-band'>Struct <a href='index.html'>coatcheck</a>::<wbr><a class='struct' href=''>Ticket</a></span><span class='out-of-band'><span id='render-detail'>
-            <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-185' class='srclink' href='../src/coatcheck/lib.rs.html#238-241'>[src]</a></span></h1>
+            <a id="toggle-all-docs" href="#" title="collapse all docs">[-]</a>
+        </span><a id='src-182' class='srclink' href='../src/coatcheck/lib.rs.html#236-239' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>#[must_use = "you need this ticket to claim your item"]
 pub struct Ticket {
     // some fields omitted
