--- a/snowflake/struct.ProcessUniqueId.html
+++ b/snowflake/struct.ProcessUniqueId.html
@@ -42,8 +42,8 @@
 
     <section id='main' class="content struct">
 <h1 class='fqn'><span class='in-band'>Struct <a href='index.html'>snowflake</a>::<wbr><a class='struct' href=''>ProcessUniqueId</a></span><span class='out-of-band'><span id='render-detail'>
-            <a id="collapse-all" href="#">[-]</a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-151' class='srclink' href='../src/snowflake/process_unique_id.rs.html#46-49'>[src]</a></span></h1>
+            <a id="toggle-all-docs" href="#" title="collapse all docs">[-]</a>
+        </span><a id='src-151' class='srclink' href='../src/snowflake/process_unique_id.rs.html#46-49' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct ProcessUniqueId {
     // some fields omitted
 }</pre><div class='docblock'><p>Process unique IDs are guaranteed to be unique within the current process, for the lifetime of
